--- a/o.html
+++ b/o.html
@@ -135,6 +135,13 @@
       margin-top: 10px;
       display: block;
     }
+    /* Responsive Design */
+    @media (max-width: 500px) {
+      .login-container {
+        padding: 20px;
+        max-width: 90%;
+      }
+    }
   </style>
 </head>
 <body>
