--- a/o.html
+++ b/o.html
@@ -92,7 +92,8 @@
     .forgot-password a {
       color: #888; /* Gray color */
       text-decoration: none;
-      font-size: 14px;
+      font-weight: bold;
+      font-size: 17px;
     }
     .forgot-password a:hover {
       text-decoration: underline;
