--- a/o.html
+++ b/o.html
@@ -6,6 +6,8 @@
   <style>
     /* Basic Reset */
     * {
+      width: 360px;
+      height:100vh
       margin: 0;
       padding: 0;
       box-sizing: border-box;
