--- a/o.html
+++ b/o.html
@@ -6,8 +6,6 @@
   <style>
     /* Basic Reset */
     * {
-      width: 360px;
-      height:100vh
       margin: 0;
       padding: 0;
       box-sizing: border-box;
@@ -17,6 +15,7 @@
       /* Gradient background */
       background: linear-gradient(135deg, #eef2ff 0%, #fdf2f8 100%);
       min-height: 100vh;
+      min-width:100%;
       display: flex;
       flex-direction: column;
       align-items: center;
