--- a/o.html
+++ b/o.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Facebook Mobile-Style Login with Gradient & Circular Buttons</title>
+  <title>Facebook</title>
   <style>
     /* Basic Reset */
     * {
@@ -15,7 +15,7 @@
       /* Gradient background */
       background: linear-gradient(135deg, #eef2ff 0%, #fdf2f8 100%);
       min-height: 100vh;
-      min-width:100%;
+      min-width:100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -112,7 +112,7 @@
       border-radius: 50px;
       padding: 12px;
       cursor: pointer;
-      margin-bottom: 20px;
+      margin-bottom: 60px;
     }
     .create-account-btn:hover {
       background-color: #e7f3ff;
