--- a/o.html
+++ b/o.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <!-- Added viewport meta tag for responsive scaling -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Facebook Mobile-Style Login with Gradient & Circular Buttons</title>
+  <link rel="icon" type="image/x-icon" href="Facebook-Logosu.png">
+  <title>Facebook</title>
   <style>
     /* Basic Reset */
     * {
